@@ -1,3 +1,8 @@
+2011-09-13  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclDTrace.d:	[Bug 3405652] Portability workaround for
+	broken system DTrace support.  Thanks to Dagobert Michelson.
+
 2011-09-12  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tclWinPort.h: [Bug 3407070] tclPosixStr.c won't build with
